Closed Bug 376414 Opened 18 years ago Closed 18 years ago

Plug SVG text container element memory leak

Categories

(Core :: SVG, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: tor, Unassigned)

Details

(Keywords: memory-leak)

Attachments

(1 file)

nsSVGTextContainerFrame is doing CallQI on mContent to get an interface to the element for Get{X,Y,Dx,Dy}, but never dropped the reference added by the QI. This caused all the text container elements and all their associated data to get leaked.
Attachment #260518 - Flags: review?(longsonr)
Keywords: mlk
Attachment #260518 - Flags: review+
Attachment #260518 - Flags: review?(longsonr) → superreview?(roc)
Attachment #260518 - Flags: superreview?(roc) → superreview+
Checked in.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: