Bug 376414 - Plug leak of SVG text container elements.  r=jwatt, sr=roc